// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGhost> global render should render 1`] = `
.c0 {
  color: #0E353D;
  font-size: 16px;
  line-height: 20px;
  background-color: transparent;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 4px;
  min-width: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  min-width: 32px;
  padding: 10px 16px;
  height: 40px;
}

.c0 svg {
  margin: -8px -16px;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  border: 1px solid #D9DFE0;
  background-color: transparent;
}

.c0:active:not(:disabled) {
  border: 1px solid #D9DFE0;
  background-color: #D9DFE0;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:disabled span {
  pointer-events: none;
}

.c1 {
  font-family: inherit;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<ButtonGhost>
  <Component
    colors={
      Object {
        "dark": Object {
          "backgroundColor": Object {
            "active": "#3E5D64",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#3E5D64",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
        },
        "default": Object {
          "backgroundColor": Object {
            "active": "#D9DFE0",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#D9DFE0",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "textColor": "#0E353D",
        },
      }
    }
    customStyle={
      Array [
        "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
      ]
    }
  >
    <BaseButton
      customStyle={
        Array [
          "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
        ]
      }
      theme={
        Object {
          "backgroundColor": Object {
            "active": "#D9DFE0",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#D9DFE0",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "textColor": "#0E353D",
        }
      }
    >
      <styled.button
        customStyle={
          Array [
            "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
          ]
        }
        theme={
          Object {
            "backgroundColor": Object {
              "active": "#D9DFE0",
              "hover": "transparent",
              "idle": "transparent",
            },
            "borderColor": Object {
              "active": "#D9DFE0",
              "hover": "#D9DFE0",
              "idle": "transparent",
            },
            "textColor": "#0E353D",
          }
        }
      >
        <StyledComponent
          customStyle={
            Array [
              "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
            ]
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bxivhb",
                "isStatic": false,
                "lastClassName": "cqcLst",
                "rules": Array [
                  "
  ",
                  "
  color: ",
                  [Function],
                  ";
  font-size: 16px;
  line-height: 20px;
  background-color: ",
                  [Function],
                  ";
  cursor: pointer;
  border: ",
                  [Function],
                  ";
  border-radius: 4px;
  min-width: 60px;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: none;
  transition: all 0.1s;
  ",
                  [Function],
                  ";

  &:hover:not(:disabled),
  &:focus:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:active:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:disabled {
    opacity: 0.6;
    cursor: not-allowed;
    span {
      pointer-events: none;
    }
  }
",
                  "
  padding: 10px 16px;
  height: 40px;
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bxivhb",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "backgroundColor": Object {
                "active": "#D9DFE0",
                "hover": "transparent",
                "idle": "transparent",
              },
              "borderColor": Object {
                "active": "#D9DFE0",
                "hover": "#D9DFE0",
                "idle": "transparent",
              },
              "textColor": "#0E353D",
            }
          }
        >
          <button
            className="c0"
          >
            <Styled(styled.span)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-EHOje",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  font-family: inherit;
  font-weight: 600;
",
                        "
  display: flex;
  justify-content: center;
  align-items: center;
",
                      ],
                    },
                    "displayName": "Styled(styled.span)",
                    "foldedComponentIds": Array [
                      "sc-bwzfXH",
                    ],
                    "render": [Function],
                    "styledComponentId": "sc-EHOje",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </Styled(styled.span)>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonGhost>
`;

exports[`<ButtonGhost> global render should render 2`] = `
.c0 {
  color: #FFFFFF;
  font-size: 16px;
  line-height: 20px;
  background-color: transparent;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 4px;
  min-width: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  min-width: 32px;
  padding: 10px 16px;
  height: 40px;
}

.c0 svg {
  margin: -8px -16px;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  border: 1px solid #3E5D64;
  background-color: transparent;
}

.c0:active:not(:disabled) {
  border: 1px solid #3E5D64;
  background-color: #3E5D64;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:disabled span {
  pointer-events: none;
}

.c1 {
  font-family: inherit;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<ButtonGhost
  theme="dark"
>
  <Component
    colors={
      Object {
        "dark": Object {
          "backgroundColor": Object {
            "active": "#3E5D64",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#3E5D64",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
        },
        "default": Object {
          "backgroundColor": Object {
            "active": "#D9DFE0",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#D9DFE0",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "textColor": "#0E353D",
        },
      }
    }
    customStyle={
      Array [
        "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
      ]
    }
    theme="dark"
  >
    <BaseButton
      customStyle={
        Array [
          "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
        ]
      }
      theme={
        Object {
          "backgroundColor": Object {
            "active": "#3E5D64",
            "hover": "transparent",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#3E5D64",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
        }
      }
    >
      <styled.button
        customStyle={
          Array [
            "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
          ]
        }
        theme={
          Object {
            "backgroundColor": Object {
              "active": "#3E5D64",
              "hover": "transparent",
              "idle": "transparent",
            },
            "borderColor": Object {
              "active": "#3E5D64",
              "hover": "#3E5D64",
              "idle": "transparent",
            },
          }
        }
      >
        <StyledComponent
          customStyle={
            Array [
              "
  min-width: 32px;
  svg {
    margin: -8px -16px;
  }
",
            ]
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bxivhb",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  ",
                  "
  color: ",
                  [Function],
                  ";
  font-size: 16px;
  line-height: 20px;
  background-color: ",
                  [Function],
                  ";
  cursor: pointer;
  border: ",
                  [Function],
                  ";
  border-radius: 4px;
  min-width: 60px;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: none;
  transition: all 0.1s;
  ",
                  [Function],
                  ";

  &:hover:not(:disabled),
  &:focus:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:active:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:disabled {
    opacity: 0.6;
    cursor: not-allowed;
    span {
      pointer-events: none;
    }
  }
",
                  "
  padding: 10px 16px;
  height: 40px;
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bxivhb",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "backgroundColor": Object {
                "active": "#3E5D64",
                "hover": "transparent",
                "idle": "transparent",
              },
              "borderColor": Object {
                "active": "#3E5D64",
                "hover": "#3E5D64",
                "idle": "transparent",
              },
            }
          }
        >
          <button
            className="c0"
          >
            <Styled(styled.span)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-EHOje",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  font-family: inherit;
  font-weight: 600;
",
                        "
  display: flex;
  justify-content: center;
  align-items: center;
",
                      ],
                    },
                    "displayName": "Styled(styled.span)",
                    "foldedComponentIds": Array [
                      "sc-bwzfXH",
                    ],
                    "render": [Function],
                    "styledComponentId": "sc-EHOje",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </Styled(styled.span)>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonGhost>
`;
